--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	},
 	"scripts": {
 		"dev": "react-scripts start",
-		"start": "node server.js",
+		"start": "nodemon server.js",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
