--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react": "^18.3.1",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "^18.3.1",
+		"react-quill": "^2.0.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^7.0.2",
 		"react-scripts": "5.0.1",
